[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,17 +2,7 @@
 <head>
     <title>Article-two ~ Wasib Tariq</title>
       <meta name="viewport" content="width-device-width, initial-scale=1" />
-    <style>
-        .container {
-    max-width: 800px;
-    color: #5f5353;
-    font-family: sans-serif;
-    padding-top: 60px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-        }
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
