--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
+        </div>
+        <hr/>
+        <br>
+        <h3>Personal</h3>
+        </div>
+        <div>
+            Hi, my name is Wasib and i am software developer.
         </div>
         <br>
         <div class="center text-big bold">
