--- a/ui/index.html
+++ b/ui/index.html
@@ -16,10 +16,13 @@
             Hi, my name is Wasib and i am software developer.
         </div>
         <hr/>
-        <br>
+        <h3>Professional</h3>
         <div class="center text-big bold">
-            Hi! I am Wasib and this is my first webapp.
-			<h4>I've made some local changes.</h4>
+            I am a computer science graduate and working in a software company in Noida.
+        </div>
+        <hr/>
+        <div class = "footer">
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
