[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         </div>
         <hr/>
         <h3>Professional</h3>
-        <div class="center text-big bold">
+        <div>
             I am a computer science graduate and working in a software company in Noida.
         </div>
         <hr/>
