--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,14 @@
         <hr/>
         <div class = "footer">
             This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
+        <br>
+        <hr/>
+        <input type="text" id="name" placeholder="name">Name</input>
+        <input type="submit" value="submit">Submit</input>
+        <ul>
+            <li>name1</li>
+            <li>name2</li>
+        </ul>
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
