[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,11 +24,9 @@
             This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
         <br>
         <hr/>
-        <input type="text" id="name" placeholder="name">Name</input>
-        <input type="submit" value="submit">Submit</input>
-        <ul>
-            <li>name1</li>
-            <li>name2</li>
+        <input type="text" id="name" placeholder="name"></input>
+        <input type="submit" value="submit" id="submit_but"></input>
+        <ul id="namelist">
         </ul>
         </div>
         </div>
